--- a/css/style.css
+++ b/css/style.css
@@ -1,22 +1,10 @@
-//////////////////////////////
-// Training Day
-//////////////////////////////
-$nav--color: #66FFCC;
-$context: 960px;
-
-@function fluid($target) {
-  @return $target / $context * 100%;
-}
-
 body {
-    background-color: #282828;
-    color: #ffffff;
-}
+  background-color: #282828;
+  color: #ffffff; }
 
 ._main-heading {
-  width: fluid(400px);
-  margin: 0 auto;
-}
+  width: 41.66667%;
+  margin: 0 auto; }
 
 h1 {
   text-decoration: none;
@@ -25,8 +13,7 @@ h1 {
   font-weight: lighter;
   color: #ffffff;
   letter-spacing: 10px;
-  text-align: center;
-}
+  text-align: center; }
 
 h2 {
   text-decoration: none;
@@ -36,61 +23,51 @@ h2 {
   color: #66FFCC;
   letter-spacing: 3px;
   text-align: center;
-  text-transform: uppercase;
-}
+  text-transform: uppercase; }
 
 p {
-    font-family: "Helvetica";
-    font-size: 10pt;
-    line-height: 20px;
-}
+  font-family: "Helvetica";
+  font-size: 10pt;
+  line-height: 20px; }
 
-.nav{
+.nav {
   border: 1px solid #ccc;
   border-width: 1px 0;
   list-style: none;
   margin: 0;
   padding: 0;
-  text-align: center;
-}
+  text-align: center; }
 
 .nav--item {
   display: inline;
   margin: .5em;
-  padding-bottom: .25em;
-}
+  padding-bottom: .25em; }
 
 .nav--item:hover {
-  border-color: //mix($nav--color, black, 70%)
-  complement($nav--color);
+  border-color: #ff6699;
   font-family: "Helvetica";
   font-weight: bold;
   font-size: 10pt;
   line-height: 20px;
-  text-transform: uppercase;
-}
+  text-transform: uppercase; }
 
 .nav--link {
   text-decoration: none;
-  color: $nav--color;
+  color: #66FFCC;
   font-family: "Helvetica";
   font-size: 10pt;
   line-height: 20px;
-  text-transform: uppercase;
-}
+  text-transform: uppercase; }
 
 .nav--link:hover {
-  //color: mix($nav--color, black, 70%);
-  color: complement($nav--color);
+  color: #ff6699;
   font-family: "Helvetica";
   font-size: 10pt;
   line-height: 20px;
-  text-transform: uppercase;
-}
+  text-transform: uppercase; }
 
 ._video {
-  width: fluid(400px);
+  width: 41.66667%;
   margin: 0 auto;
   padding: 2em;
-  max-width: 36em;
-}
+  max-width: 36em; }
